# obs-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
backend/: .dockerignore  Dockerfile  endpoints.py  main.py  pyproject.toml
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Connections.tsx  EntityTooltip.tsx  GraphCanvas.tsx  Header.tsx  Legend.tsx  MiniNode.tsx  NodeCard.tsx  OntologyViewerModal.tsx  SchemaEditorModal.tsx  Sidebar.tsx  YamlEditor.tsx  ZoomControls.tsx
frontend/src/components/ui/: button.tsx
frontend/src/fixtures/: sample-discovery.ts
frontend/src/hooks/: useGraph.ts
frontend/src/lib/: utils.ts
