[project]
name = "obs-demo-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openbuildingstack",
]

[project.optional-dependencies]
ai = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
openbuildingstack = { git = "https://github.com/C4SBF/obs-python.git" }

# For local development with the OBS monorepo, use instead:
# openbuildingstack = { path = "../../", editable = true }
